--- a/Machine learning Nanodegree/boston_housing/boston_housing.ipynb
+++ b/Machine learning Nanodegree/boston_housing/boston_housing.ipynb
@@ -1678,7 +1678,7 @@
     "\n",
     "reg = fitter(X_train, y_train, reg_in, param_grid)\n",
     "\n",
-    "This does not change the functionality of the code yet will lead to be able to be generalizable to almost any kind of regressor and classifier. Hence, the change above is required to run the code cell below"
+    "This does not change the functionality of the code yet will lead to it to be able to be generalizable to almost any kind of regressor and classifier. Hence, the change above is required to run the code cell below"
    ]
   },
   {
